--- a/purbeurre/templates/base.html
+++ b/purbeurre/templates/base.html
@@ -72,7 +72,7 @@
     <footer class="bg-light py-5">
         <div class="container px-4 px-lg-5">
             <div style="float: left" class="small text-center text-muted">
-                <a href='#mentionslegales'>Mentions Légales</a>
+                <a href='{% url "legalmentions" %}'>Mentions Légales</a>
             </div>
             <div style="float: right" class="small text-center text-muted">
                 <a href='#contact'>Contact</a>
